--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@mui/joy": "^5.0.0-beta.32",
     "@mui/material": "^5.15.15",
     "bootstrap": "^5.3.3",
-    "next": "14.2.1",
+    "next": "^14.2.3",
     "react": "^18",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18",
