--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18",
     "react-fast-marquee": "^1.6.4",
-    "react-helmet": "^6.1.0",
+    "react-helmet-async": "^2.0.4",
     "react-icons": "^5.1.0",
     "sass": "^1.75.0",
     "sharp": "^0.33.3",
