--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "prebuild": "node build-utilities/generate-robots.js",
-    "build": "node build-utilities/generate-sitemap.js && next build",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
