--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-fast-marquee": "^1.6.4",
     "react-helmet-async": "^2.0.4",
     "react-icons": "^5.1.0",
-    "sass": "^1.75.0"
+    "sass": "^1.75.0",
+    "swiper": "^11.1.1"
   },
   "devDependencies": {
     "eslint": "^8",
