--- a/package.json
+++ b/package.json
@@ -16,17 +16,24 @@
     "@mui/joy": "^5.0.0-beta.32",
     "@mui/material": "^5.15.15",
     "bootstrap": "^5.3.3",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.2.12",
+    "gsap": "^3.12.5",
+    "hubspot": "^2.3.14",
     "next": "^14.2.1",
     "react": "^18",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18",
     "react-fast-marquee": "^1.6.4",
     "react-helmet-async": "^2.0.4",
+    "react-hubspot-form": "^1.3.7",
     "react-icons": "^5.1.0",
     "sass": "^1.75.0",
-    "swiper": "^11.1.1"
+    "swiper": "^11.1.1",
+    "tailwind-merge": "^2.3.0"
   },
   "devDependencies": {
+    "@types/node": "20.14.9",
     "eslint": "^8",
     "eslint-config-next": "14.2.1"
   }
