--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-hubspot-form": "^1.3.7",
     "react-icons": "^5.1.0",
     "sass": "^1.75.0",
+    "styled-components": "^6.1.11",
     "swiper": "^11.1.1",
     "tailwind-merge": "^2.3.0"
   },
