--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.11.5",
     "@mui/joy": "^5.0.0-beta.32",
     "@mui/material": "^5.15.15",
+    "@vercel/speed-insights": "^1.0.12",
     "bootstrap": "^5.3.3",
     "clsx": "^2.1.1",
     "framer-motion": "^11.2.12",
