--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "react-helmet-async": "^2.0.4",
     "react-hubspot-form": "^1.3.7",
     "react-icons": "^5.1.0",
+    "react-router-dom": "^6.24.1",
     "sass": "^1.75.0",
+    "sharp": "^0.33.4",
     "styled-components": "^6.1.11",
     "swiper": "^11.1.1",
     "tailwind-merge": "^2.3.0"
