--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18",
     "react-fast-marquee": "^1.6.4",
-    "react-helmet-async": "^2.0.4",
+    "react-helmet": "^6.1.0",
+    "react-helmet-async": "^2.0.5",
     "react-hubspot-form": "^1.3.7",
     "react-icons": "^5.1.0",
     "react-router-dom": "^6.24.1",
