--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "@emotion/styled": "^11.11.5",
     "@mui/joy": "^5.0.0-beta.32",
     "@mui/material": "^5.15.15",
+    "@sanity/client": "^6.21.0",
+    "@sanity/image-url": "^1.0.2",
+    "@sanity/vision": "^3.50.0",
     "@vercel/speed-insights": "^1.0.12",
     "bootstrap": "^5.3.3",
     "clsx": "^2.1.1",
@@ -23,8 +26,9 @@
     "gsap": "^3.12.5",
     "hubspot": "^2.3.14",
     "next": "^14.2.1",
+    "next-sanity": "^9.4.2",
     "react": "^18",
-    "react-bootstrap": "^2.10.2",
+    "react-bootstrap": "^2.10.4",
     "react-dom": "^18",
     "react-fast-marquee": "^1.6.4",
     "react-helmet": "^6.1.0",
@@ -32,6 +36,7 @@
     "react-hubspot-form": "^1.3.7",
     "react-icons": "^5.1.0",
     "react-router-dom": "^6.24.1",
+    "sanity": "^3.50.0",
     "sass": "^1.75.0",
     "sharp": "^0.33.4",
     "styled-components": "^6.1.11",
