--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "bootstrap": "^5.3.3",
     "clsx": "^2.1.1",
     "contentful": "^10.12.8",
-    "framer-motion": "^11.3.2",
+    "framer-motion": "^11.3.8",
     "gsap": "^3.12.5",
     "hubspot": "^2.3.14",
     "next": "^14.2.5",
@@ -36,6 +36,7 @@
     "react-helmet-async": "^2.0.5",
     "react-hubspot-form": "^1.3.7",
     "react-icons": "^5.2.1",
+    "react-intersection-observer": "^9.13.0",
     "react-router-dom": "^6.24.1",
     "sanity": "^3.50.0",
     "sass": "^1.77.8",
